--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Team Points Tracker</title>
+  <title>Sudanese Mothers' Conference</title>
   <style>
     :root {
       --red: #ff5a5f;
@@ -453,7 +453,7 @@
   <div class="confetti-container" id="confetti-container"></div>
 
   <footer>
-    <p>Team Points Tracker | Made with ❤️</p>
+    <p>Sudanese Mothers' Conference | 25 May</p>
   </footer>
 
   <script>
