--- a/index.html
+++ b/index.html
@@ -422,12 +422,12 @@
 </head>
 <body>
   <header>
-    <h1>Team Points Tracker</h1>
+    <h1>Sudanese Mothers' Conference</h1>
   </header>
 
   <div class="container">
     <div class="leaderboard-header">
-      <div class="trophy-icon">🏆</div>
+      <div class="trophy-icon">✝️</div>
       <div class="leaderboard-title">LEADERBOARD</div>
     </div>
     
